update appointment statistic